<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".mainUi.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="5"
                android:textColorHint="#000000"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="?android:textAppearanceLarge">

                <EditText
                    android:id="@+id/username_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingTop="12dp"
                    android:singleLine="true"
                    android:textSize="25sp" />


                <!--converting he edit text to autocomplete edit text-->
                <!--<AutoCompleteTextView-->
                    <!--android:id="@+id/username_editText"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/prompt_username"-->
                    <!--android:inputType="text"-->
                    <!--android:maxLines="1"-->
                    <!--android:paddingTop="12dp"-->
                    <!--android:singleLine="true"-->
                    <!--android:textSize="25sp" />-->

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="5"
                android:hint="@string/prompt_password"
                android:textColorHint="#000000"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="?android:textAppearanceLarge">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingTop="12dp"
                    android:singleLine="true"
                    android:textSize="23sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:onClick="login"
                android:text="@string/action_log_in"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signup_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:onClick="goToRegistration"
                android:padding="8dp"
                android:text="@string/click_here_to_register"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="goToRegistration"
                android:text="Resister"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
