<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shaafi.mydoctor.doctor.DoctorRegistration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:padding="4dp"
                    app:hintTextAppearance="?android:textAppearanceLarge"
                    app:counterOverflowTextAppearance="?android:textAppearanceLarge">

                    <EditText
                        android:id="@+id/det_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:maxLines="1"
                        android:paddingTop="20dp"
                        android:shadowColor="@color/colorPrimary"
                        android:singleLine="true"
                        android:textSize="25sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/div_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/the_field_is_rightly_filled"
                    android:src="@drawable/ic_check_circle_white_24dp"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    app:hintTextAppearance="?android:textAppearanceLarge">

                    <EditText
                        android:id="@+id/det_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:maxLines="1"
                        android:paddingTop="20dp"
                        android:shadowColor="@color/colorPrimary"
                        android:singleLine="true"
                        android:textSize="25sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/div_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/the_field_is_rightly_filled"
                    android:src="@drawable/ic_check_circle_white_24dp"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    app:hintTextAppearance="?android:textAppearanceLarge">

                    <EditText
                        android:id="@+id/det_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingTop="20dp"
                        android:shadowColor="@color/colorPrimary"
                        android:singleLine="true"
                        android:textSize="25sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/div_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/the_field_is_rightly_filled"
                    android:src="@drawable/ic_check_circle_white_24dp"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    app:hintTextAppearance="?android:textAppearanceLarge">

                    <EditText
                        android:id="@+id/det_rePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/retype_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingTop="20dp"
                        android:shadowColor="@color/colorPrimary"
                        android:singleLine="true"
                        android:textSize="25sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/div_rePassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/the_field_is_rightly_filled"
                    android:src="@drawable/ic_check_circle_white_24dp"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    app:hintTextAppearance="?android:textAppearanceLarge">

                    <EditText
                        android:id="@+id/det_sectors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sector_s"
                        android:inputType="text"
                        android:maxLines="1"
                        android:overScrollMode="ifContentScrolls"
                        android:paddingTop="20dp"
                        android:shadowColor="@color/colorPrimary"
                        android:textSize="25sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/div_sectors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/the_field_is_rightly_filled"
                    android:src="@drawable/ic_check_circle_white_24dp"
                    android:visibility="invisible" />

            </LinearLayout>

            <Button
                android:id="@+id/registrationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginTop="16dp"
                android:background="@drawable/enter_button_bg"
                android:onClick="registerNewUser"
                android:text="@string/register"
                android:focusableInTouchMode="false"
                android:focusable="false"/>

        </LinearLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/reg_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>
